--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "main": "index.js",
   "author": "Genrikh Fetischev",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon --inspect src/index.js"
+  },
   "dependencies": {
+    "fs-extra": "^7.0.1",
     "isomorphic-fetch": "^2.2.1",
     "koa": "^2.7.0",
-    "node-telegram-bot-api": "^0.30.0"
+    "node-telegram-bot-api": "^0.30.0",
+    "word2vec": "1.1.2"
   },
   "devDependencies": {
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "prettier": "^1.16.4"
   }
 }
